# redteam-1

./: .gitignore  README.md  backlog.txt  experiment.py  load_data.py  main.py  multidepth_rt.py  pyproject.toml
notebooks/: explore_dataset.ipynb
prompts/original/: 1.json
prompts/translation/: 1.json
utils/: translator.py
